[package]
name = "photo_backup"
version = "0.1.0"
authors = ["mmabardy"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs_extra = "1.1.0"
twox-hash = "1.5.0"
chrono = "0.4"
regex = "1"
glob = "0.3.0"
systemstat = "0.1.5"
ring = "*"
data-encoding = "*"
error-chain = "*"